--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
   <script data-main="app/config" src="assets/js/libs/require.js"></script>
-  <div class="navbar navbar-fixed-top navbar-inverse" role="navigation">
+
+  <!-- NAVIGATION BAR -->
+  <div id="navbar" class="navbar navbar-fixed-top navbar-inverse" role="navigation">
     <div class="container navbar-container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
@@ -18,18 +20,29 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Project name</a>
+        <a class="navbar-brand" href="#"> Relsem Bridge Manager </a>
       </div>
       <div class="navbar-collapse collapse" style="height: 1px;">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li> <a href="#home"> Home </a> </li>
+          <li> <a href="#tables"> Tables </a> </li>
+          <li> <a href="#editor"> Editor </a> </li>
+          <li> <a href="#about"> About </a> </li>
         </ul>
       </div>
     </div>
   </div>
-  <div id="main-container" class="container main-container">
+
+  <!-- MAIN CONTAINER -->
+  <div id="main" class="container main-container">
   </div>
+
+  <!-- FOOTER -->
+  <footer id="footer" class="container footer-container">
+    <div class="footer">
+      <p>© FER, Ericsson Nikola Tesla 2013 </p>
+    </footer>
+  </footer>
+
 </body>
 </html>
