GUI Prototype work

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </div>
 
   <!-- MAIN CONTAINER -->
-  <div id="main" class="container main-container">
+  <div id="main" class="main-container">
   </div>
 
   <!-- FOOTER -->
