--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <li> <a href="#editor"> Editor </a> </li>
           <li> <a href="#about"> About </a> </li>
         </ul>
-        <button type="button" class="btn btn-default pull-right hide"> Disconect </button>
+        <button type="button" class="btn btn-default btn-logout pull-right hide"> Disconect </button>
       </div>
     </div>
   </div>
