--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="assets/css/main.css">
   <link rel="stylesheet" href="assets/css/bootstrap.css">
   <link rel="stylesheet" href="assets/css/bootstrap-theme.css">
+  <link rel="stylesheet" href="assets/css/jquery-ui-1.10.3.custom.min.css">
 </head>
 <body>
   <script data-main="app/config" src="assets/js/libs/require.js"></script>
