--- a/index-release.html
+++ b/index-release.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <title>Relsem Bridge Manager </title>
+  <title> Relsem Bridge Frontend </title>
   <link rel="stylesheet" href="assets/css/main.css">
   <link rel="stylesheet" href="assets/css/bootstrap.css">
   <link rel="stylesheet" href="assets/css/bootstrap-theme.css">
   <link rel="stylesheet" href="assets/css/jquery-ui-1.10.3.custom.min.css">
 </head>
 <body>
-  <script data-main="app/config" src="assets/js/libs/require.js"></script>
-
+  <script data-main="app/config" src="RelsemBridgeFrontend.js"></script>
+  
   <!-- NAVIGATION BAR -->
   <div id="navbar" class="navbar navbar-fixed-top navbar-inverse" role="navigation">
     <div class="container navbar-container">
