--- a/index-release.html
+++ b/index-release.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <script data-main="app/config" src="RelsemBridgeFrontend.js"></script>
-  
+
   <!-- NAVIGATION BAR -->
   <div id="navbar" class="navbar navbar-fixed-top navbar-inverse" role="navigation">
     <div class="container navbar-container">
@@ -21,10 +21,11 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#"> Relsem Bridge Manager </a>
+        <a class="navbar-brand" href="#"> Ericsson </a>
       </div>
       <div class="navbar-collapse collapse" style="height: 1px;">
         <ul class="nav navbar-nav">
+          <li> <a href="#"> Relsem Bridge </a> </li>
           <li> <a href="#editor"> Editor </a> </li>
           <li> <a href="#about"> About </a> </li>
         </ul>
