--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>Relsem Bridge Manager </title>
-  <link rel="stylesheet" href="assets/css/main.css">
+  <link rel="stylesheet" href="assets/generated/main.css">
   <link rel="stylesheet" href="assets/css/bootstrap.css">
-  <link rel="stylesheet" href="assets/css/bootstrap-theme.css">
   <link rel="stylesheet" href="assets/css/jquery-ui-1.10.3.custom.min.css">
 </head>
 <body>
